--- a/IntroComponent/src/App.css
+++ b/IntroComponent/src/App.css
@@ -81,8 +81,12 @@ input{
   align-self: stretch;
   border-radius: 8px;
   border: 1px solid hsl(246, 25%, 77%);
-  padding: 4px 16px;
+  padding: 4px 24px;
   color: black;
+}
+
+input:focus{  
+  outline: 1px solid hsl(248, 32%, 49%);
 }
 
 input::placeholder{
