--- a/IntroComponent/src/App.css
+++ b/IntroComponent/src/App.css
@@ -3,6 +3,7 @@ main{
   grid-template-columns: 1fr 1fr;
   justify-content: center;
   align-items: center;
+  min-width: 320px;
   max-width: 1000px;
 }
 
@@ -39,6 +40,9 @@ h1{
   font-weight: 300;
   width: 100%;
   max-width: 500px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   
   span{
     font-weight: 700;
@@ -76,6 +80,29 @@ h1{
   }
 }
 
+.lvg{
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  width: 100%;
+  gap: 2px;
+
+  span{
+    color: hsl(0, 98%, 58%);
+    font-size: 12px;
+    align-self: flex-start;
+    margin-left: 4px;
+  }
+}
+
+.lvg:has(span){
+  input{
+    border: 1px solid hsl(0, 98%, 58%);
+  }
+}
+
+
+
 input{
   min-height: 48px;
   align-self: stretch;
@@ -85,6 +112,8 @@ input{
   color: black;
 }
 
+
+
 input:focus{  
   outline: 1px solid hsl(248, 32%, 49%);
 }
@@ -92,4 +121,42 @@ input:focus{
 input::placeholder{
     font-family: "Poppins", sans-serif;
     font-weight: 500;
+}
+
+@media (max-width: 700px){
+  main{
+    grid-template-columns: 1fr;
+    padding: 32px;
+    gap: 32px;
+  }
+
+  h1{
+    text-align: center;
+  }
+
+  .right-part{
+    padding: 0;
+  }
+
+  .left-part{
+    padding: 0;
+  }
+
+  .left-part > p{
+  text-align: center;
+}
+
+  .right-part > button{
+    max-width: none;
+    white-space: normal;
+    height: auto;
+  }
+
+  .right-part > form{
+    max-width: none;
+    p{
+      text-align: center;
+    }
+  }
+
 }
